# manta-control

./: .gitignore  README.md
joystick/scripts/: joystick_no_manipulator.py
joystick_interface/: CMakeLists.txt  README.md  package.xml
joystick_interface/launch/: joystick_interface.launch  joystick_twist.launch
joystick_interface/scripts/: joystick_interface.py  joystick_no_manipulator.py  joystick_remapper.py  joystick_twist.py
manipulator_interface/: CMakeLists.txt  README.md
pwm_interface/: CMakeLists.txt  package.xml  readme.md
pwm_interface/launch/: pwm.launch
pwm_interface/scripts/: pca9685_interface.py  pca9685_interface_standardized.py
sensor_interface/: CMakeLists.txt  README.md  package.xml
sensor_interface/scripts/: ms5837.py  ms5837_interface.py  test.py
thruster_interface/: CMakeLists.txt  package.xml
thruster_interface/config/: thruster_t200.yaml  thruster_terrapin.yaml
thruster_interface/launch/: ordinary.launch
thruster_interface/scripts/: thruster_interface.py  thruster_interface_node.py  thruster_interface_node_standardized.py
usb_cam/launch/: usb_cam-test.launch
vortex/: package.xml
vortex/config/environments/: trondheim_freshwater.yaml  trondheim_saltwater.yaml
vortex/config/robots/: .manta.yaml.swp  manta.yaml
vortex/include/vortex/: eigen_helper.h
vortex/launch/: README.MD  camera_tilt_test.launch  manta.launch  manta_no_thruster.launch  manta_webviz.launch  obs_test.launch  physical_test.launch  simulator.launch  standardization.launch
vortex_allocator/: CMakeLists.txt  package.xml
vortex_allocator/include/vortex_allocator/: allocator_ros.h
vortex_allocator/src/: allocator_node.cpp  allocator_ros.cpp  allocator_ros_standardized.cpp
vortex_controller/: CMakeLists.txt  package.xml
vortex_controller/cfg/: Controller.cfg
vortex_controller/guidance/src/: los_guidance.cpp
vortex_controller/include/vortex_controller/: control_modes.h  controller_ros.h  controller_ros_BACKUP.h  controller_ros_standardized.h  los_guidance.h  quaternion_pid_controller.cpp  quaternion_pid_controller.h
vortex_controller/src/: controller_ros.cpp  controller_ros_standardized.cpp  quaternion_pd_controller.cpp  quaternion_pid_controller.cpp  ros_service
vortex_controller/srv/: setpoint.srv
vortex_estimator/: CMakeLists.txt  README.md  package.xml
vortex_estimator/include/vortex_estimator/: simple_estimator.h
vortex_estimator/src/: estimator.cpp  simple_estimator.cpp  simple_estimator_standardized.cpp
