<?xml version="1.0"?>

<package>
    <name>pwm_interface</name>
    <version>0.1.0</version>
    <description>This package provides an interface for the PCA9685 PWM module.</description>
    <maintainer email="borgepahlm@gmail.com">Børge Pahlm</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>roslint</build_depend>

    <run_depend>rospy</run_depend>
</package>
