<?xml version="1.0"?>
<package>
  <name>sensor_interface</name>
  <version>0.1.0</version>
  <description>Interfacing for physical sensors.</description>
  <maintainer email="borgepahlm@gmail.com">Børge Pahlm</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
