<?xml version="1.0"?>
<package>
  <name>vortex</name>
  <version>0.1.0</version>
  <description>General package with launch files and configs</description>
  <maintainer email="borgepahlm@gmail.com">Børge Pahlm</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>roscpp</run_depend>
</package>
