<?xml version="1.0"?>
<package>
  <name>vortex_allocator</name>
  <version>0.1.0</version>
  <description>The vortex_allocator package</description>
  <maintainer email="x@x.com">x@x.com</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>vortex</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>vortex</run_depend>
</package>
