<?xml version="1.0"?>
<package>
  <name>vortex_estimator</name>
  <version>0.1.0</version>
  <description>Ensures quaternions are in a NED frame</description>
  <maintainer email="borgepahlm@gmail.com">Børge Pahlm</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>vortex_msgs</build_depend>

  <run_depend>nav_msgs</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>vortex_msgs</run_depend>

</package>  
